--- a/browser/po/core-vi.po
+++ b/browser/po/core-vi.po
@@ -311,7 +311,7 @@ msgstr "3D _Sơ đồ:"
 #: chart2/uiconfig/ui/sidebartype.ui:323
 msgctxt "sidebartype|cmb_chartType-atkobject"
 msgid "Chart Type"
-msgstr ""
+msgstr "Kiểu Đồ thị"
 
 #. x3adg
 #: chart2/uiconfig/ui/tp_ChartColorPalette.ui:68
@@ -395,7 +395,7 @@ msgstr ""
 #: cui/uiconfig/ui/numberingformatpage.ui:541
 msgctxt "numberingformatpage|currencylb-atkobject"
 msgid "Currency"
-msgstr ""
+msgstr "Tiền tệ"
 
 #. vcAoU
 #: cui/uiconfig/ui/pageformatpage.ui:223
@@ -521,7 +521,7 @@ msgstr ""
 #: cui/uiconfig/ui/thesaurus.ui:189
 msgctxt "thesaurus|langcb|accessible_name"
 msgid "Language"
-msgstr ""
+msgstr "Ngôn ngữ"
 
 #. qpArp
 #: cui/uiconfig/ui/toolbarmodedialog.ui:124
@@ -684,19 +684,19 @@ msgstr "Nhập số cột bạn muốn trong trang, frame hoặc phần."
 #: sw/uiconfig/swriter/ui/dropcapspage.ui:336
 msgctxt "dropcapspage|drawingareaWN_EXAMPLE-atkobject"
 msgid "Example"
-msgstr ""
+msgstr "Ví dụ"
 
 #. RdG95
 #: sw/uiconfig/swriter/ui/footnotesendnotestabpage.ui:179
 msgctxt "footnotesendnotestabpage|ftnnumviewbox-atkobject"
 msgid "Numbering"
-msgstr ""
+msgstr "Đánh số"
 
 #. afJmD
 #: sw/uiconfig/swriter/ui/footnotesendnotestabpage.ui:455
 msgctxt "footnotesendnotestabpage|endnumviewbox-atkobject"
 msgid "Numbering"
-msgstr ""
+msgstr "Đánh số"
 
 #. Ci9GE
 #: sw/uiconfig/swriter/ui/spellmenu.ui:34
@@ -726,7 +726,7 @@ msgstr ""
 #: sw/uiconfig/swriter/ui/tokenwidget.ui:30
 msgctxt "tokenwidget|left"
 msgid "Scroll left"
-msgstr ""
+msgstr "Kéo trái"
 
 #. Efssr
 #: sw/uiconfig/swriter/ui/tokenwidget.ui:98
@@ -1098,7 +1098,7 @@ msgctxt ""
 "TooltipLabel\n"
 "value.text"
 msgid "Delete Table"
-msgstr ""
+msgstr "Chọn bảng"
 
 #. 3Ep4Y
 #: CalcCommands.xcu
@@ -1560,7 +1560,7 @@ msgstr ""
 #: xmlsecurity/uiconfig/ui/selectcertificatedialog.ui:274
 msgctxt "selectcertificatedialog|searchbox-atkobject"
 msgid "Search"
-msgstr ""
+msgstr "Tìm"
 
 #. dw79G
 #: sc/inc/globstr.hrc:70
@@ -1572,13 +1572,13 @@ msgstr ""
 #: sc/inc/globstr.hrc:73
 msgctxt "STR_UNDO_DBTABLE"
 msgid "Create table"
-msgstr ""
+msgstr "Tạo bảng"
 
 #. J2Dh9
 #: sc/inc/globstr.hrc:74
 msgctxt "STR_UNDO_DBTABLE"
 msgid "Delete table"
-msgstr ""
+msgstr "Xoá trang"
 
 #. AvAbD
 #: sc/inc/globstr.hrc:140
@@ -1596,7 +1596,7 @@ msgstr ""
 #: sc/inc/globstr.hrc:195
 msgctxt "STR_CALC_TABLE"
 msgid "Table"
-msgstr ""
+msgstr "Bảng"
 
 #. GFiBr
 #: sc/inc/globstr.hrc:196
@@ -1608,7 +1608,7 @@ msgstr ""
 #: sc/inc/globstr.hrc:217
 msgctxt "STR_TABLE_TOTAL"
 msgid "Total"
-msgstr ""
+msgstr "Tổng"
 
 #. wCfcy
 #: sc/inc/globstr.hrc:220
@@ -2408,6 +2408,10 @@ msgid ""
 "then automatically convert to the Maximize icon. Click it to restore the "
 "dialog to its original size."
 msgstr ""
+"Nhấp vào biểu tượng Thu nhỏ để giảm hộp thoại về kích thước của trường nhập."
+" Khi đó việc đánh dấu tham chiếu cần thiết trong trang tính sẽ dễ dàng hơn. "
+"Các biểu tượng sau đó sẽ tự động chuyển sang biểu tượng Tối đa hoá. Nhấp vào"
+" nó để khôi phục hộp thoại về kích thước ban đầu."
 
 #. xUrKC
 #: sc/uiconfig/scalc/ui/definetablerangedialog.ui:123
@@ -2418,12 +2422,16 @@ msgid ""
 "then automatically convert to the Maximize icon. Click it to restore the "
 "dialog to its original size."
 msgstr ""
+"Nhấp vào biểu tượng Thu nhỏ để giảm hộp thoại về kích thước của trường nhập."
+" Khi đó việc đánh dấu tham chiếu cần thiết trong trang tính sẽ dễ dàng hơn. "
+"Các biểu tượng sau đó sẽ tự động chuyển sang biểu tượng Tối đa hoá. Nhấp vào"
+" nó để khôi phục hộp thoại về kích thước ban đầu."
 
 #. 8FLdj
 #: sc/uiconfig/scalc/ui/definetablerangedialog.ui:139
 msgctxt "definetablerangedialog|range"
 msgid "Range"
-msgstr ""
+msgstr "Phạm vi"
 
 #. 3a7g7
 #: sc/uiconfig/scalc/ui/definetablerangedialog.ui:162
@@ -2442,6 +2450,8 @@ msgstr ""
 msgctxt "definetablerangedialog|extended_tip|DefineTableRangeDialog"
 msgid "Defines a database range based on the selected cells in your sheet."
 msgstr ""
+"Xác định một phạm vi cơ sở dữ liệu dựa vào những ô được chọn trên trang "
+"tính."
 
 #. LVdkf
 #: sc/uiconfig/scalc/ui/erroralerttabpage.ui:15
@@ -2459,13 +2469,13 @@ msgstr ""
 #: sc/uiconfig/scalc/ui/gotosheetdialog.ui:100
 msgctxt "gotosheetdialog|entry-mask-atkobject"
 msgid "Sheet Name"
-msgstr ""
+msgstr "Tên Trang tính"
 
 #. hMeBi
 #: sc/uiconfig/scalc/ui/numberbox.ui:17
 msgctxt "numberbox|numbertype|accessible_name"
 msgid "Number Format"
-msgstr ""
+msgstr "Định dạng số"
 
 #. o8pcB
 #: sc/uiconfig/scalc/ui/protectsheetdlg.ui:195
@@ -3347,4 +3357,4 @@ msgstr ""
 #: sc/uiconfig/scalc/ui/tablestylesbox.ui:185
 msgctxt "tablestylebox|tablestyles_cb|accessible_name"
 msgid "Table Styles"
-msgstr ""
+msgstr "Kiểu trang: "
